(Thanks to Marco Martire)



Version 1.0.6 - 27/11/2018

- Added the config package in the cloud.jgo.net package

- Moved the json methods to the enhanced jGo class

- Added a method in JjDom, which allows us to work on multiple documents:swicth()

- Resolved all bugs related to servers configurations

- A small utility class added: ServersUtils

- Resolved other server-related bugs

- Added new method to jGo, for the creation of a simple login server:createLoginServer()
(Thanks to Marco Martire)



Version 1.0.7 - 11/12/2018

- New methods have been added to the jQuerySupport interface

- The "getNodePath()" method has been added to the Node interface.

- Now even the commands can receive a value from input, just like the parameters.

- The "contains()" method has been added to the Node interface.

- all the nodes of the dom have been redefined.

- a new package has been added: cloud.jgo.jjdom.dom.nodes.xml : for xml nodes.

- the "inputSettable" interface was created in the package: cloud.jgo.utils.command.

- A new method has been created in the node interface: removeChildren ().

- Bugs have been fixed in the methods that create the elements - JjDom.

- New enum : jQuerySelector.

- Two methods have been added in the HTMLElement class : hide()/show()/getPropCss()...

- A new method has been created in the "Manipulable" interface: getElementsByName().

- Different methods have been redefined in JjDom.

- New methods have been added in the _W: WebUtils phase.

- The "getDocumentFormat()" method has been added to the Document interface.

- New method added to JjDom: download ().

- New method added to the access point jGo: play().
(Thanks to Marco Martire)



Version 1.0.8 - in dev

- Abbiamo ridefinito tutti i server, ed eliminato i bugs derivanti dalla ridefinizione delle configurazioni server

- Sto creando una nuova interfaccia net, che raggruppi i metodi per il reperimento dei comandi nel server o client
